--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+dist: bionic
 language: cpp
 compiler: gcc
 
@@ -15,7 +16,6 @@ before_install:
   - wd="$PWD" && cd .. && git clone https://github.com/catchorg/Catch2.git && cd Catch2 && cmake -Bbuild -H. -DBUILD_TESTING=OFF && sudo cmake --build build/ --target install && cd $wd
 
 script:
-  - ls -R /usr/lib/x86_64-linux-gnu/
   - cmake -H. -Bbuild
   - cmake --build build --target Test && ./build/Test
   - cmake --build build --target Database
