--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,18 +5,6 @@ set(CMAKE_CXX_STANDARD 20)
 
 set(CMAKE_CXX_FLAGS "-lglog")
 
-if("${OS_INFO}" MATCHES "buntu")
-    message("Running on Ubuntu - manually linking SDL2!")
-    set(UBUNTU 1)
-endif()
-
-if(UBUNTU)
-    set(GLOG /usr/lib/x86_64-linux-gnu/libgoogle-glog.so)
-
-    target_link_libraries(eve ${GLOG})
-    target_link_libraries(tests ${GLOG})
-endif()
-
 file(GLOB_RECURSE SRCS ${PROJECT_SOURCE_DIR}/src/*/*.cpp)
 file(GLOB_RECURSE TEST_SRCS ${PROJECT_SOURCE_DIR}/test/*.cpp)
 add_executable(Database src/main.cpp ${SRCS})
@@ -32,3 +20,7 @@ set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 target_link_libraries(Database Threads::Threads)
 target_link_libraries(Test Threads::Threads)
+
+find_library(GLOG_LIBRARY glog)
+target_link_libraries(Database glog)
+target_link_libraries(Test glog)
