feat(helper): include support for the google logging library (glog) (#4)
+ symlink to /tmp/ directory (for log files)

log files are saved under:
"/tmp/<program name>.<hostname>.<user name>.log.<severity level>.<date>.<time>.<pid>"
(check http://rpg.ifi.uzh.ch/docs/glog.html for more information)

BREAKING CHANGE:
Requires Google's logging library to be installed, i.e.,
* Arch:   google-glog
* Ubuntu: libgoogle-glog-dev
* Others: https://github.com/google/glog

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+dist: bionic
 language: cpp
 compiler: gcc
 
@@ -6,6 +7,7 @@ addons:
     update: true
     packages:
         - cmake
+        - libgoogle-glog-dev
 
 git:
   depth: 3
