--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(Database)
 
 set(CMAKE_CXX_STANDARD 20)
 
+set(CMAKE_CXX_FLAGS "-lglog")
+
 file(GLOB_RECURSE SRCS ${PROJECT_SOURCE_DIR}/src/*/*.cpp)
 file(GLOB_RECURSE TEST_SRCS ${PROJECT_SOURCE_DIR}/test/*.cpp)
 add_executable(Database src/main.cpp ${SRCS})
@@ -18,3 +20,7 @@ set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 target_link_libraries(Database Threads::Threads)
 target_link_libraries(Test Threads::Threads)
+
+find_library(GLOG_LIBRARY glog)
+target_link_libraries(Database glog)
+target_link_libraries(Test glog)
