--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ addons:
         - cmake
         - libgoogle-glog-dev
 
+env:
+  - SCRATCHQL_ROOT=$PWD
+
 git:
   depth: 3
 
@@ -17,5 +20,5 @@ before_install:
 
 script:
   - cmake -H. -Bbuild
-  - cmake --build build --target Test && ./build/Test
+  - cmake --build build --target Test && mkdir tmp && ./build/Test
   - cmake --build build --target Database
