feat(server): use Cap'n Proto to implement an RPC server (#21)
It includes the actual server, currently running on localhost (the default setting of this will be moved in the future).
Also, it includes a sample client implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,10 @@ project(Database)
 
 set(CMAKE_CXX_STANDARD 20)
 
-set(CMAKE_REQUIRED_LIBRARIES "-lglog")
+set(CMAKE_REQUIRED_LIBRARIES "-lglog -lcapnp -lcapnp-rpc -lkj -lkj-async")
 
-file(GLOB_RECURSE SRCS ${PROJECT_SOURCE_DIR}/src/*/*.cpp)
-file(GLOB_RECURSE TEST_SRCS ${PROJECT_SOURCE_DIR}/test/*.cpp)
+file(GLOB_RECURSE SRCS ${PROJECT_SOURCE_DIR}/src/*/*.c*)
+file(GLOB_RECURSE TEST_SRCS ${PROJECT_SOURCE_DIR}/test/*.c*)
 add_executable(Database src/main.cpp ${SRCS})
 add_executable(Test ${TEST_SRCS} ${SRCS})
 
@@ -16,5 +16,23 @@ include(CTest)
 include(Catch)
 catch_discover_tests(Test)
 
+set(THREADS_PREFER_PTHREAD_FLAG ON)
+find_package(Threads REQUIRED)
+target_link_libraries(Database Threads::Threads)
+target_link_libraries(Test Threads::Threads)
+
 target_link_libraries(Database glog)
 target_link_libraries(Test glog)
+
+find_package(CapnProto REQUIRED)
+target_link_libraries(Database CapnProto::capnp)
+target_link_libraries(Test CapnProto::capnp)
+
+target_link_libraries(Database CapnProto::capnp-rpc)
+target_link_libraries(Test CapnProto::capnp-rpc)
+
+target_link_libraries(Database kj)
+target_link_libraries(Test kj)
+
+target_link_libraries(Database kj-async)
+target_link_libraries(Test kj-async)
