--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,9 @@ git:
 
 before_install:
   - sudo add-apt-repository -y ppa:jonathonf/gcc-9.0 && sudo apt-get -q update && sudo apt-get -y install gcc-9
-  - gcc-9 -v && sudo rm /usr/bin/gcc && sudo mv /usr/bin/gcc-9 /usr/bin/gcc && gcc -v
-  - g++-9 -v && sudo rm /usr/bin/g++ && sudo mv /usr/bin/g++-9 /usr/bin/g++ && g++ -v
+#  - gcc-9 -v && sudo rm /usr/bin/gcc && sudo mv /usr/bin/gcc-9 /usr/bin/gcc && gcc -v
+#  - g++-9 -v && sudo rm /usr/bin/g++ && sudo mv /usr/bin/g++-9 /usr/bin/g++ && g++ -v
+  - ls -l /usr/bin | grep g++
   - curl -O https://capnproto.org/capnproto-c++-0.8.0.tar.gz && tar zxf capnproto-c++-0.8.0.tar.gz && cd capnproto-c++-0.8.0 && ./configure && make -j6 check && sudo make install && cd ../
   - wd="$PWD" && cd .. && git clone https://github.com/catchorg/Catch2.git && cd Catch2 && cmake -Bbuild -H. -DBUILD_TESTING=OFF && sudo cmake --build build/ --target install && cd $wd
 
