--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,9 +22,9 @@ add_dependencies(Database CapnProto)
 install()
 
 set(THREADS_PREFER_PTHREAD_FLAG ON)
-target_link_libraries(Database "/usr/include/threads.h")
-#find_package(Threads REQUIRED)
-#target_link_libraries(Database Threads::Threads)
+#target_link_libraries(Database "/usr/include/threads.h")
+find_package(Threads REQUIRED)
+target_link_libraries(Database Threads::Threads)
 
 target_link_libraries(Database glog)
 
@@ -47,11 +47,11 @@ IF (Catch2_FOUND)
     include(Catch)
     catch_discover_tests(Test)
 
-    #target_link_libraries(Test Threads::Threads)
+    target_link_libraries(Test Threads::Threads)
 
     target_link_libraries(Test glog)
 
-    target_link_libraries(Test "/usr/include/threads.h")
+#    target_link_libraries(Test "/usr/include/threads.h")
 
     target_link_libraries(Test CapnProto::capnp)
     target_link_libraries(Test CapnProto::capnp-rpc)
