--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,5 @@ before_install:
 
 script:
   - cmake -H. -Bbuild
-  - cmake --build build --target Test && mkdir tmp && ./build/Test
-  - cmake --build build --target Database
+  - cmake -lpthread --build build --target Test && mkdir tmp && ./build/Test
+  - cmake -lpthread --build build --target Database
