--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,6 @@ before_install:
   - wd="$PWD" && cd .. && git clone https://github.com/catchorg/Catch2.git && cd Catch2 && cmake -Bbuild -H. -DBUILD_TESTING=OFF && sudo cmake --build build/ --target install && cd $wd
 
 script:
-  - cmake -H. -Bbuild
+  - cmake -lpthread -H. -Bbuild
   - cmake -lpthread --build build --target Test && mkdir tmp && ./build/Test
   - cmake -lpthread --build build --target Database
