fix(ci): link pthread header statically

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ install()
 
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
-target_link_libraries(Database "/usr/include/threads.h")
+target_link_libraries(Database "/usr/include/pthread.h")
 target_link_libraries(Database Threads::Threads)
 
 target_link_libraries(Database glog)
@@ -49,7 +49,7 @@ IF (Catch2_FOUND)
 
     target_link_libraries(Test glog)
 
-    target_link_libraries(Test "/usr/include/threads.h")
+    target_link_libraries(Test "/usr/include/pthread.h")
     target_link_libraries(Test Threads::Threads)
 
     target_link_libraries(Test CapnProto::capnp)
