--- a/.travis.yml
+++ b/.travis.yml
@@ -19,10 +19,9 @@ git:
 
 before_install:
   #  - curl -O https://capnproto.org/capnproto-c++-0.8.0.tar.gz && tar zxf capnproto-c++-0.8.0.tar.gz && cd capnproto-c++-0.8.0 && ./configure && make -j6 check && sudo make install && cd ../
-  - sudo apt purge --auto-remove cmake && wget "https://cmake.org/files/v3.17/cmake-3.17.3.tar.gz" && tar -xzvf cmake-3.17.3.tar.gz && cd cmake-3.17.3/ && ./bootstrap && make -j$(nproc) && sudo make install
+  - sudo apt purge --auto-remove cmake && wget "https://cmake.org/files/v3.17/cmake-3.17.3.tar.gz" && tar -xzvf cmake-3.17.3.tar.gz && cd cmake-3.17.3/ && ./bootstrap && make -j$(nproc) && sudo make install && cd ../
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test && sudo apt-get -q update && sudo apt -y install g++-9 gcc-9 && sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-9 90 --slave /usr/bin/g++ g++ /usr/bin/g++-9 --slave /usr/bin/gcov gcov /usr/bin/gcov-9
   - wd="$PWD" && cd .. && git clone https://github.com/catchorg/Catch2.git && cd Catch2 && cmake -Bbuild -H. -DBUILD_TESTING=OFF && sudo cmake --build build/ --target install && cd $wd
-  - echo $PWD
 
 script:
   - cmake -H. -Bbuild
