chore(ci): remove explicit adding of libstdc++fs
This filesystem lib was needed prior GNU 9.1.0 - since we're using >=9.3.0, it should be fine without

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ addons:
     packages:
       - cmake
       - libgoogle-glog-dev
-      - libc++-dev
+#      - libc++-dev
       - capnproto
       - libpthread-stubs0-dev
 
