--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,8 +25,8 @@ install()
 find_package(Threads REQUIRED)
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 target_link_libraries(Database Threads::Threads)
-target_link_libraries(Database "/usr/include/pthread.h")
-target_link_libraries(Database "/usr/include/threads.h")
+#target_link_libraries(Database "/usr/include/pthread.h")
+#target_link_libraries(Database "/usr/include/threads.h")
 
 target_link_libraries(Database glog)
 
@@ -52,8 +52,8 @@ IF (Catch2_FOUND)
     target_link_libraries(Test glog)
 
     target_link_libraries(Test Threads::Threads)
-    target_link_libraries(Test "/usr/include/pthread.h")
-    target_link_libraries(Test "/usr/include/threads.h")
+#    target_link_libraries(Test "/usr/include/pthread.h")
+#    target_link_libraries(Test "/usr/include/threads.h")
 
     target_link_libraries(Test CapnProto::capnp)
     target_link_libraries(Test CapnProto::capnp-rpc)
