--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,6 @@ before_install:
   - wd="$PWD" && cd .. && git clone https://github.com/catchorg/Catch2.git && cd Catch2 && cmake -Bbuild -H. -DBUILD_TESTING=OFF && sudo cmake --build build/ --target install && cd $wd
 
 script:
-  - bash setup/build
-  - cmake --build build --target Test && mkdir tmp && ./build/Test
+  - bash setup/build build
+  - cmake --build  --target Test && mkdir tmp && ./build/Test
   - cmake --build build --target Database
