--- a/.travis.yml
+++ b/.travis.yml
@@ -22,5 +22,5 @@ before_install:
 
 script:
   - bash setup/build build
-  - cmake --build  --target Test && mkdir tmp && ./build/Test
+  - cmake --build build --target Test && mkdir tmp && ./build/Test
   - cmake --build build --target Database
