fix(ci): manually add generated files to target
Issue: RPC files got generated *after* the target was set up with all
files - thus, the RPC files weren't added to the target yet.
Travis apparently didn't manage this, so manually adding them seems
necessary

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ add_custom_target(CapnProto
 file(GLOB_RECURSE SRCS ${PROJECT_SOURCE_DIR}/src/*/*.c*)
 add_executable(Database src/main.cpp ${SRCS})
 add_dependencies(Database CapnProto)
+target_sources(Database PRIVATE src/Server/generated/ServerDBMS.capnp.h)
 
 install()
 
@@ -39,6 +40,7 @@ IF (Catch2_FOUND)
     file(GLOB_RECURSE TEST_SRCS ${PROJECT_SOURCE_DIR}/test/*.c*)
     add_executable(Test ${TEST_SRCS} ${SRCS})
     add_dependencies(Test CapnProto)
+    target_sources(Test PRIVATE src/Server/generated/ServerDBMS.capnp.h)
 
     add_compile_definitions(Test ERRORS_AS_WARNINGS)
 
