--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,13 +14,11 @@ set(GEN_PROTO_FILES src/Server/generated/ServerDBMS.capnp.*)
 add_custom_command(OUTPUT ${GEN_PROTO_FILES}
         COMMAND bash -c "./gen_proto"
         WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}/src/Server/"
-        MAIN_DEPENDENCY "src/Server/ServerDBMS.capnp"
-)
+        MAIN_DEPENDENCY "src/Server/ServerDBMS.capnp")
 
 file(GLOB_RECURSE SRCS ${PROJECT_SOURCE_DIR}/src/*/*.c*)
 add_executable(Database src/main.cpp ${SRCS})
-#add_dependencies(Database CapnProto)
-target_sources(Database PRIVATE ${GEN_PROTO_FILES})
+#target_sources(Database PRIVATE ${GEN_PROTO_FILES})
 
 install()
 
@@ -40,8 +38,8 @@ find_package(Catch2)
 IF (Catch2_FOUND)
     file(GLOB_RECURSE TEST_SRCS ${PROJECT_SOURCE_DIR}/test/*.c*)
     add_executable(Test ${TEST_SRCS} ${SRCS})
-#    add_dependencies(Test CapnProto)
-    target_sources(Test PRIVATE ${GEN_PROTO_FILES})
+#    target_sources(Test PRIVATE ${GEN_PROTO_FILES})
+    target_compile_definitions(Test PRIVATE ${GEN_PROTO_FILES})
 
     add_compile_definitions(Test ERRORS_AS_WARNINGS)
 
