--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,7 @@ before_install:
   - wd="$PWD" && cd .. && git clone https://github.com/catchorg/Catch2.git && cd Catch2 && cmake -Bbuild -H. -DBUILD_TESTING=OFF && sudo cmake --build build/ --target install && cd $wd
 
 script:
+  - bash src/Server/gen_proto
   - bash setup/build build
   - cmake --build build --target Database
   - cmake --build build --target Test && mkdir tmp && ./build/Test
-  - ls src/Server/generated
-  - ls build/CMakeFiles/Test.dir/src/Server/generated
