--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,8 @@ addons:
   apt:
     update: true
     packages:
-        - cmake
-        - libgoogle-glog-dev
-        - libc++-dev
+      - cmake
+      - libgoogle-glog-dev
 
 env:
   - SCRATCHQL_ROOT=$PWD
@@ -18,9 +17,11 @@ git:
 
 before_install:
   - curl -O https://capnproto.org/capnproto-c++-0.8.0.tar.gz && tar zxf capnproto-c++-0.8.0.tar.gz && cd capnproto-c++-0.8.0 && ./configure && make -j6 check && sudo make install && cd ../
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test && sudo apt-get -q update && sudo apt -y install g++-9 gcc-9 && sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-9 90 --slave /usr/bin/g++ g++ /usr/bin/g++-9 --slave /usr/bin/gcov gcov /usr/bin/gcov-9
   - wd="$PWD" && cd .. && git clone https://github.com/catchorg/Catch2.git && cd Catch2 && cmake -Bbuild -H. -DBUILD_TESTING=OFF && sudo cmake --build build/ --target install && cd $wd
 
 script:
-  - cmake -H. -Bbuild
-  - cmake --build build --target Test && mkdir tmp && ./build/Test
+  - bash src/Server/gen_proto
+  - bash setup/build build
   - cmake --build build --target Database
+  - cmake --build build --target Test && mkdir tmp && ./build/Test
