--- a/.travis.yml
+++ b/.travis.yml
@@ -27,4 +27,6 @@ script:
   - bash src/Server/gen_proto
   - bash setup/build build
   - cmake --build build --target Database
-  - cmake --build build --target Test && mkdir -p tmp/indices && ./build/Test
+  - cmake --build build --target Test
+  - mkdir -p tmp/indices
+  - ./build/Test
