--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,20 @@ git:
   depth: 3
 
 before_install:
+    # Cap'n Proto
   - curl -O https://capnproto.org/capnproto-c++-0.8.0.tar.gz && tar zxf capnproto-c++-0.8.0.tar.gz && cd capnproto-c++-0.8.0 && ./configure && make -j6 check && sudo make install && cd ../
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test && sudo apt-get -q update && sudo apt -y install g++-9 gcc-9 && sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-9 90 --slave /usr/bin/g++ g++ /usr/bin/g++-9 --slave /usr/bin/gcov gcov /usr/bin/gcov-9
-  - wd="$PWD" && cd .. && git clone https://github.com/catchorg/Catch2.git && cd Catch2 && cmake -Bbuild -H. -DBUILD_TESTING=OFF && sudo cmake --build build/ --target install && cd $wd
+
+    # g++ v10
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update
+  - sudo apt install gcc-10 g++-10
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-10 100 --slave /usr/bin/gcc gcc /usr/bin/gcc-10 --slave /usr/bin/gcov gcov /usr/bin/gcov-10
+
+    # Catch2
+#  - wd="$PWD" && cd .. && git clone https://github.com/catchorg/Catch2.git && cd Catch2 && cmake -Bbuild -H. -DBUILD_TESTING=OFF && sudo cmake --build build/ --target install && cd $wd
+  - wd=$PWD && cd /opt && sudo git clone https://github.com/microsoft/vcpkg && sudo chown -R $eval$(whoami):$eval$(whoami) vcpkg && cd vcpkg && ./bootstrap-vcpkg.sh && ./vcpkg install catch2 && cd $wd
+
+    # Env vars / Preparation
   - export DATABASE_DIR="/var/db/scratchql"
   - sudo mkdir -p $DATABASE_DIR
   - sudo chown -R $eval$(whoami):$eval$(whoami) $DATABASE_DIR
