--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,16 @@ git:
   depth: 3
 
 before_install:
+  - export wd=$PWD
+
     # Cap'n Proto
-  - curl -O https://capnproto.org/capnproto-c++-0.8.0.tar.gz && tar zxf capnproto-c++-0.8.0.tar.gz && cd capnproto-c++-0.8.0 && ./configure && make -j6 check && sudo make install && cd ../
+  - cd "$wd/.."
+  - curl -O https://capnproto.org/capnproto-c++-0.8.0.tar.gz
+  - tar zxf capnproto-c++-0.8.0.tar.gz
+  - cd capnproto-c++-0.8.0
+  - ./configure
+  - make -j6 check
+  - sudo make install
 
     # g++ v10
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
@@ -26,13 +34,20 @@ before_install:
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-10 100 --slave /usr/bin/gcc gcc /usr/bin/gcc-10 --slave /usr/bin/gcov gcov /usr/bin/gcov-10
 
     # Catch2
-#  - wd="$PWD" && cd .. && git clone https://github.com/catchorg/Catch2.git && cd Catch2 && cmake -Bbuild -H. -DBUILD_TESTING=OFF && sudo cmake --build build/ --target install && cd $wd
-  - wd=$PWD && cd /opt && sudo git clone https://github.com/microsoft/vcpkg && sudo chown -R $eval$(whoami):$eval$(whoami) vcpkg && cd vcpkg && ./bootstrap-vcpkg.sh && ./vcpkg install catch2 && cd $wd
+  - cd /opt
+  - sudo git clone https://github.com/microsoft/vcpkg
+  - sudo chown -R $eval$(whoami):$eval$(whoami) vcpkg
+  - cd vcpkg
+  - ./bootstrap-vcpkg.sh
+  - ./vcpkg install catch2
 
     # Env vars / Preparation
-  - export DATABASE_DIR="/var/db/scratchql"
-  - sudo mkdir -p $DATABASE_DIR
-  - sudo chown -R $eval$(whoami):$eval$(whoami) $DATABASE_DIR
+  - cd $wd
+  - export SCRATCHQL_DB="/var/db/scratchql"
+  - sudo mkdir -p $SCRATCHQL_DB
+  - sudo chown -R $eval$(whoami):$eval$(whoami) $SCRATCHQL_DB
+
+  - cd $wd
 
 script:
   - bash src/Server/gen_proto
